<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.tvshow.DetailTvshowActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.MoviesApp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Detail">

            <ImageView
                android:id="@+id/tv_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                app:layout_collapseMode="parallax"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@drawable/title_bg"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#212429"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:id="@+id/title_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/genre_title"
                        style="@style/Detail.Title"
                        android:text="@string/detail_genre"
                        android:fontFamily="@font/segoe_ui_bold"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:id="@+id/tv_genre"
                        style="@style/Detail.Content.Small"
                        tools:text="Genre"
                        android:fontFamily="@font/roboto_thin"
                        android:layout_marginBottom="8dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/title_genre"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/star"
                        style="@style/Detail"
                        android:src="@drawable/ic_baseline_star_24"/>

                    <TextView
                        android:id="@+id/tv_rates"
                        style="@style/Detail.Content"
                        tools:text="Rates"
                        android:gravity="end"/>

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/overview_title"
                style="@style/Detail.Title"
                android:text="@string/detail_overview"
                android:fontFamily="@font/segoe_ui_bold"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tv_overview"
                style="@style/Detail"
                android:layout_width="match_parent"
                android:layout_marginBottom="14dp"
                android:lineHeight="20dp"
                tools:text="@string/lorem"
                android:fontFamily="@font/roboto_thin"/>

            <LinearLayout
                android:id="@+id/layout_seasons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/seasons_title"
                    style="@style/Detail.Title"
                    android:text="@string/detail_seasons"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/tv_seasons"
                    style="@style/Detail"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="14dp"
                    tools:text="Seasons"
                    android:fontFamily="@font/roboto_thin"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_runtime_episodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/runtime_episodes_title"
                    style="@style/Detail.Title"
                    android:text="@string/detail_runtime_episodes"
                    android:fontFamily="@font/segoe_ui_bold"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/tv_runtime_episodes"
                    style="@style/Detail"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="14dp"
                    tools:text="Seasons"
                    android:fontFamily="@font/roboto_thin"/>
            </LinearLayout>

            <TextView
                android:id="@+id/lang_title"
                style="@style/Detail.Title"
                android:text="@string/detail_lang"
                android:fontFamily="@font/segoe_ui_bold"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tv_lang"
                style="@style/Detail"
                android:layout_width="match_parent"
                android:layout_marginBottom="14dp"
                tools:text="lang"
                android:fontFamily="@font/roboto_thin"/>

            <Button
                android:id="@+id/btn_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="#D51153"
                android:text="@string/btn_trailer_text"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="end|top"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:baselineAlignBottom="false"
            app:srcCompat="@drawable/ic_share"
            android:backgroundTint="#0015171B"
            android:layout_marginEnd="10dp"
            tools:ignore="ContentDescription"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:baselineAlignBottom="false"
            android:src="@drawable/ic_playlist_add"
            android:backgroundTint="#0015171B"
            tools:ignore="ContentDescription"/>

    </LinearLayout>

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:baselineAlignBottom="false"-->
<!--        android:clickable="true"-->
<!--        android:src="@drawable/ic_play"-->
<!--        app:fabSize="normal"-->
<!--        app:layout_anchor="@id/appbar"-->
<!--        app:layout_anchorGravity="end|bottom"-->
<!--        android:layout_marginEnd="30dp"-->
<!--        app:backgroundTint="@color/material_on_primary_emphasis_high_type"-->
<!--        android:focusable="true" />-->


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_toggle_btn" />

    </FrameLayout>

    <ToggleButton
        android:id="@+id/btn_toggle_fav"
        android:layout_width="34dp"
        android:layout_height="31dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_favorite_white"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff=""
        android:textOn=""
        app:layout_anchor="@+id/frameLayout"
        app:layout_anchorGravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>