...
    <string name="toolbar_description">Explore Movies and TvShows Now</string>

    <string name="tvtitle">Judul Film</string>
    <string name="tvhoureps">Jam atau Episode</string>

    <string name="movie">Movie</string>
    <string name="tvshow">TV Show</string>
    <string name="detail_genre">Genre</string>
    <string name="detail_overview">Overview</string>
    <string name="detail_lang">Language</string>
    <string name="detail_runtime">Runtime</string>
    <string name="detail_seasons">Season</string>
    <string name="detail_runtime_episodes">Runtime Episodes</string>

    <string name="tv_runtime">%1$s minutes</string>
    <string name="tv_runtime_episodes">%1$s episodes</string>
    <string name="tv_seasons">%1$s seasons</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vel magna quis augue suscipit varius ut sed quam. Vivamus feugiat sapien at sapien tincidunt, et pellentesque nisl mattis. Nunc id efficitur quam. Fusce viverra elementum ipsum. Pellentesque ornare, nisi id auctor accumsan, ipsum erat scelerisque turpis, sit amet varius diam elit eget nibh.</string>
    <string name="btn_trailer_text">Watch Trailer</string>

...
